# publications

./: .coveragerc  .env_public  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LULU.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  output_test_html_from_test_base_parser (without css).html  output_test_html_from_test_base_parser.html  pre-commit  pyproject.toml  requirements.txt  scheme.html  setup.cfg  setup.py  test.html
.github/: pull_request_template.md
.github/workflows/: auto_run_publisher.yml  publisher_test.yml  run_publisher.yml  test.yml
covers/: README.md  all-color-example.html  epub-cover-example.html  epub-cover-template.html  hardcover-jacket-example.html  hardcover-jacket-template.html  paperback-cover-example.html  paperback-cover-template.html
covers/styles/: cover-styles.css  neacademica.css  paperback-styles.css
deployment/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
deployment/requirements/: dev.in  dev.txt  prod.in  prod.txt
src/html_generator/: html_generator.py
src/sutta_publisher/: __main__.py  main.py  run.py
src/sutta_publisher/edition_parsers/: __init__.py  base.py  epub.py  helper_functions.py  html.py  pdf.py
src/sutta_publisher/engine/: main.py
src/sutta_publisher/ingester/: base.py  helper_functions.py  json_parser.py  parser.py  tsv_parser.py
src/sutta_publisher/publishers/: base.py  html.py
src/sutta_publisher/shared/: .~lock.dn.tsv#  config.py  data.py  github_handler.py  publisher.py
src/sutta_publisher/static/: styles.css
src/sutta_publisher/templates/: single_page_basic_template.html
sutta_publisher/: Dockerfile  dev.in  dev.txt  docker_entrypoint.sh  policy.xml  prod.in  prod.txt  requirements.txt
sutta_publisher/assets/fonts/: NotoSerifTC-Black-Alphabetic.eot  NotoSerifTC-Bold-Alphabetic.eot  demo.html  (+6 more)
sutta_publisher/src/: output_test_html_from_test_base_parser (without css).html  output_test_html_from_test_base_parser.html
sutta_publisher/tests/: conftest.py  pytest.ini  test_sources.py
templates/: blurb-template.html  colophon.html  halftitle-page-template.html  imprint-template.html  main-toc.html  secondary-toc.html  title-page-template.html
tests/: conftest.py  test_dummy.py  test_html_generator.py  test_sources.py
tests/e2e/: test_publishing.py
tests/fixtures/: publisher.py
tests/unit/: test_base_parser.py  test_config.py  test_epub_edition.py  test_getting_data.py  test_github_handler.py  test_helper_functions.py  test_results.py  test_tsv_parser.py
tmp/: Middle Discourses vol 1.epub
(+250 files in other folders)
