[metadata]
name = SuttaCentral Publisher
description = SuttaCentral publishing engine for HTML, EPUB, PDF.
author = SuttaCentral
author_email = sc@example.com
license = Unlicense
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://suttacentral.net/
version = 0.1

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.10

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.10"


[options.packages.find]
where = src
exclude =
    tests


[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install sutta_publisher[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov


[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --color=yes
    --verbose
norecursedirs =
    .idea
    .logs
    .mypy_cache
    .pytest_cache
    .run
    .tox
    .venv
    build
    deployment
    dist
testpaths = tests
python_paths=src tests
filterwarnings =
    ignore::pytest.PytestAssertRewriteWarning
    ignore::pytest.PytestConfigWarning


[pycodestyle]
max-line-length=120


[isort]
combine_as_imports = True
include_trailing_comma=True
line_length=120
multi_line_output=3
use_parentheses=True
known_domain = sutta_publisher
sections = FUTURE,STDLIB,THIRDPARTY,DOMAIN,FIRSTPARTY,LOCALFOLDER
known_first_party = fixtures
